FRONT -  Some adjusts

--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -372,9 +372,9 @@
               '<div class="box box-info">'+
                 '<div class="box-header with-border">'+
                   '<h3 class="box-title">'+
-                    '<b>Proyecto:  </b>'+proyectNames[_proyID] +' - '+
-                    '<b>Transmisor:</b>  '+data[i].name+
-                    ' - <span id="epoch_'+epochID+'"> -  Ultima actualización: </span>'+
+                    'Proyecto: <b>'+proyectNames[_proyID] +'</b> '+
+                    'Transmisor:  <b>'+data[i].name+'</b><br/>'+
+                    '<span id="epoch_'+epochID+'"> -  Ultima actualización: </span>'+
                   '</h3>'+
                   '<div class="box-tools pull-right">'+
                     '<button class="btn btn-box-tool" data-widget="collapse">'+
