--- a/dashboard/templates/admin/admin_sensorEquipment_list.html
+++ b/dashboard/templates/admin/admin_sensorEquipment_list.html
@@ -43,13 +43,13 @@
 
                   <td>
                     <div class="btn-group">
-                      <a href= "{% url 'sensorEquipmentDetail' pk=sensor.id %} " target="_self">
+                      <a href= "{% url 'sensorEquipmentDetail' pk=equipment.id %} " target="_self">
                         <button  type="button" class="btn btn-success">Ver</button>
                       </a>
-                      <a href= "{% url 'sensorEquipmentEdit' pk=sensor.id %} " target="_self">
+                      <a href= "{% url 'sensorEquipmentEdit' pk=equipment.id %} " target="_self">
                         <button  type="button" class="btn btn-info">Editar</button>
                       </a>
-                      <a href= "{% url 'sensorEquipmentDelete' pk=sensor.id %} " target="_self">
+                      <a href= "{% url 'sensorEquipmentDelete' pk=equipment.id %} " target="_self">
                         <button type="button" class="btn btn-danger">Borrar</button>
                       </a>
                     </div>
