FRONT - Updates & Equipment views

--- a/dashboard/templates/admin/admin_sensorEquipment_edit.html
+++ b/dashboard/templates/admin/admin_sensorEquipment_edit.html
@@ -10,9 +10,10 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        ADMIN - {% if form.initial %} EDITAR {% else %} CREAR {% endif %}
+        ADMINISTRACIÓN DE EQUIPOS ASIGNADOS EN LOS SENSORES<br/>
+        {% if form.initial %} EDITAR {% else %} CREAR {% endif %}
          - EQUIPO DEL SENSOR
-        <small>Equipos</small>
+        <small></small>
       </h1>
     </section>
 
