--- a/dashboard/templates/admin/admin_sensorEquipment_delete.html
+++ b/dashboard/templates/admin/admin_sensorEquipment_delete.html
@@ -9,38 +9,27 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        Admin - Control de EQUIPOS
-        <small>VIEW para borrar un elemento</small>
+        ADMINISTRACIÓN DE EQUIPOS ASIGNADOS EN LOS SENSORES
+        <small>BORRAR EQUIPO {{sensorequipment.equipment_name}} </small>
 
       </h1>
-      <ol class="breadcrumb">
-        <li>
-          <a href="#">
-            <i class="fa fa-dashboard"></i>
-            Home</a>
-        </li>
-        <li class="active">Dashboard</li>
-      </ol>
+
     </section>
 
     <!-- Main content -->
 <section class="content">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-8">
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Estas seguro?</h3>
+          <h3 class="box-title">Al presionar <b>BORRAR</b> se eliminara todo registro relacionado. <b>¿Estas seguro? </b></h3>
         </div><!-- /.box-header -->
-        <!-- form start -->
-        <h1>Nombre del proyecto: <b> {{sensortype.name}}</b> </h1>
         <form role="form" action="" method="post">
           {% csrf_token %}
-
           {{form}}
-
           <div class="box-footer">
             <a href="#">
-              <a href="{% url 'sensorTypeList' %}" class="btn btn-default">Regresar</a>
+              <a href="{% url 'sensorEquipmentList' %}" class="btn btn-default">Regresar</a>
               <button type="submit" class="btn btn-danger">Borrar</button>
             </a>
           </div>
