--- a/dashboard/templates/admin/admin_sensorEquipment_detail.html
+++ b/dashboard/templates/admin/admin_sensorEquipment_detail.html
@@ -9,18 +9,10 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-        ADMIN - EQUIPOS -  DETALLE -  {{sensortype.name }}
-        <small>LISTA DE SENSORES</small>
+        ADMINISTRACIÓN DETALLE DEL EQUIPO: <b>{{sensorequipment.equipment_name}}</b>
+        <small>Proyecto: <b>{{sensorequipment.project.name}}</b>  </small>
 
       </h1>
-      <ol class="breadcrumb">
-        <li>
-          <a href="#">
-            <i class="fa fa-dashboard"></i>
-            Home</a>
-        </li>
-        <li class="active">Dashboard</li>
-      </ol>
     </section>
 
     <!-- Main content -->
@@ -31,65 +23,51 @@
       <div class="box box-solid">
         <div class="box-header with-border">
           <i class="fa fa-adjust"></i>
-          <h3 class="box-title">Información del Sensor:  <b>{{sensortype.name }}</b></h3>
+          <h3 class="box-title">Información del Equipo:
+            <b>{{sensorequipment.equipment_name }}</b>
+          </h3>
         </div><!-- /.box-header -->
         <div class="box-body">
           <dl class="dl-horizontal">
-            <dt>Nombre del Sensor</dt>
+            <dt>ID Equipo</dt>
             <dd>
-              <a href="#" target="_self">
-                {{sensortype.name }}
-              </a>
+                Equipo00{{sensorequipment.id }}
             </dd>
-            <dt>ID Sensor</dt>
+            <dt>Nombre del Equipo</dt>
             <dd>
-                {{sensortype.id }}
+              {{sensorequipment.equipment_name }}
             </dd>
-
-            <dt>Descripción</dt>
+            <dt>Modelo</dt>
             <dd>
-                {{sensortype.description }}
+              {{sensorequipment.equipment_model }}
             </dd>
 
-            <dt>Prefijo del Sensor</dt>
+            <dt>Marca</dt>
             <dd>
-                {{sensortype.prefix }}
+              {{sensorequipment.equipment_brand }}
             </dd>
 
-            <dt>Modelo del Sensor</dt>
+            <dt>No. Serie</dt>
             <dd>
-                {{sensortype.model }}
+                {{sensorequipment.equipment_serial }}
             </dd>
 
-            <dt>Tipo de dato a enviar</dt>
+            <dt>Medidas</dt>
             <dd>
-                {{sensortype.get_data_type_display }}
+                {{sensorequipment.equipment_size }}
             </dd>
 
 
+            <dt>Comentarios</dt>
+            <dd>
+                {{sensorequipment.equipment_comments }}
+            </dd>
 
-            <dt>Archivo técnico</dt>
-            <dd> {{sensortype.data_sheet }} </dd>
-
-            <dt>Foto del Sensor</dt>
-            <dd> {{sensortype.data_image }} </dd>
-
+            <dt>Notas</dt>
+            <dd>
+                {{sensorequipment.equipment_notes }}
+            </dd>
           </dl>
-
-          <div class="row">
-            <h3 class="text-center"> Archivos del Sensor </h3>
-            <div class="col-xs-6">
-              <a href="{{ MEDIA_URL }}{{sensortype.data_sheet }}" target="_blank">
-                <img src="http://placehold.it/180x180&amp;text=DATASHEET" alt="company logo">
-              </a>
-            </div>
-            <div class="col-xs-6">
-              <a href="{{ MEDIA_URL }}{{sensortype.data_sheet }}" target="_blank">
-                <img src="http://placehold.it/180x180&amp;text=IMAGE" alt="company logo">
-              </a>
-            </div>
-          </div>
-
         </div><!-- /.box-body -->
       </div><!-- /.box -->
     </div>
@@ -98,8 +76,8 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="box">
-        <a href="{% url 'sensorTypeList' %}">
-          <button class="btn btn-block btn-info btn-lg">Regresar a Lista de Sensores</button>
+        <a href="{% url 'sensorEquipmentList' %}">
+          <button class="btn btn-block btn-info btn-lg">Regresar a Lista de Equipos</button>
         </a>
       </div>
     </div>
