--- a/templates/main_header.html
+++ b/templates/main_header.html
@@ -379,19 +379,8 @@
             <li><a href="{% url 'ticket:ticket-add' %}"><i class="fa fa-laptop"></i> <span>Nuevo Ticket</span></a></li>
           </ul>
         </li>
-        <li class="treeview">
-          <a href="#">
-            <i class="fa fa-laptop"></i>
-            <span>STATUS</span>
-            <i class="fa fa-angle-left pull-right"></i>
-          </a>
-          <ul class="treeview-menu" style="display: none;">
-            <li><a href="{% url 'sensorEquipmentList' %}"><i class="fa fa-laptop"></i> <span>Status general</span></a></li>
-          </ul>
-        </li>
 
-
-
+        <li><a href="{% url 'sensorEquipmentList' %}"><i class="fa fa-laptop"></i> <span>STATUS GENERAL</span></a></li>
 
       {% else %}
 
